--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ composer.lock
 
 # Node
 /node_modules/
-package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -34,3 +33,5 @@ typo3conf/
 
 # OS
 Thumbs.db
+
+.phpdoc
